# tradegate

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  orchestrator.py  pyproject.toml
.github/workflows/: build.yml
credentials/: base.py  encrypted_file.py  keyring_backend.py  manager.py
detection/: atspi_fill.py  focus_watch.py  pyautogui_fill.py  window.py  xdotool_fill.py
native/: build.sh  twsquiet.c
ui/: _electron.py  account_picker.py  password_prompt.py
ui/electron/: main.js  package-lock.json  package.json  preload.js
ui/electron/dialogs/: account-picker.html  add-account.html  add-password.html  confirm-delete.html  edit-account.html  password-prompt.html  set-master-password.html  settings.html  shared.css
