[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradegate"
version = "0.1.0"
description = "Trading platform auto-login launcher"
requires-python = ">=3.11"
dependencies = [
    "keyring>=24.0",
    "cryptography>=41.0",
    "tomli_w>=1.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
windows = ["pywinauto>=0.6.8"]
# Linux focus watchdog (restore_focus). Without it, restore_focus is a no-op
# and logs that it is disabled; the LD_PRELOAD focus shield is unaffected.
linux = ["python-xlib>=0.31"]

[project.scripts]
tradegate = "tradegate.cli:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["tradegate*"]
