[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradegate"
version = "0.2.0"
description = "Trading platform auto-login launcher"
requires-python = ">=3.11"
dependencies = [
    "keyring>=24.0",
    "cryptography>=41.0",
    "tomli_w>=1.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
windows = ["pywinauto>=0.6.8"]
# Linux focus watchdog (restore_focus). Without it, restore_focus is a no-op
# and logs that it is disabled; the LD_PRELOAD focus shield is unaffected.
linux = ["python-xlib>=0.31"]

[project.scripts]
tradegate = "tradegate.cli:main"

# The repo root IS the `tradegate` package (modules live here, and the code
# imports itself as `tradegate.*`). Map the package to "." so an isolated build
# (CI / pip install / python -m build) finds the sources in its own build tree.
# The old `where = [".."]` pointed discovery outside the build dir: it only
# resolved in a local checkout whose parent happened to contain this dir, and
# produced an empty wheel everywhere else.
[tool.setuptools]
packages = [
    "tradegate",
    "tradegate.credentials",
    "tradegate.detection",
    "tradegate.platforms",
    "tradegate.ui",
]

[tool.setuptools.package-dir]
"tradegate" = "."
